--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Mako==1.0.7
 MarkupSafe==1.1.1
 python-dateutil==2.7.3
 python-editor==1.0.3
+pyodbc==4.0.30
 six==1.11.0
 SQLAlchemy==1.2.8
 Werkzeug==0.14.1
